--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,7 +31,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Django App</a>
+          <a class="navbar-brand mr-4" href="{% url 'home' %}">Django App</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -45,8 +45,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="/">Home</a>
-              <a class="nav-item nav-link" href="/about">About</a>
+              <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
